namespace cpp MyMpp
namespace java MyMpp.thrift

struct TRequestCtx {
	1: required string file_name
}
